tdf#155369 ScIndirect: handle names that resolve to...

table structured references.

Conflicts:
	sc/qa/unit/subsequent_filters_test2.cxx

Change-Id: I897feeeb49e63c1758cf64450799acb192e2d593
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151888
Tested-by: Jenkins
Reviewed-by: Dennis Francis <dennis.francis@collabora.com>